--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,3 +73,66 @@ div {
 	line-height: 100%;
 	color: #ffffff;
 }
+
+#modal-main-text {
+	
+	width: 380px;
+	height: 24px;
+	margin-left: 95px;
+	margin-top: 30px;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 150%;
+}
+
+#alert {
+	
+	width: 380px;
+	height: 50px;
+	margin-left: 95px;
+	margin-top: 56px;
+	font-weight: 700;
+	font-size: 42px;
+	line-height: 120%;
+	/* or 50px */
+}
+
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: #121212; /* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+	background-color: #ffffff;
+	margin: 15% auto;
+	padding: 20px;
+	width: 64%;
+	height: 210px;
+}
+
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+	width: 12px;
+	height: 12px;
+	position: absolute;
+	margin-right: 46px;
+	margin-top: 46px;
+}
+
+.close:hover,
+.close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
