--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-width: 505px;
+	min-width: 600px;
 }
 
 #page {
@@ -30,7 +30,7 @@ div {
 #image {
 	width: 505px;
 	height: 330px;
-	background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_538.jpg");
+	background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg");
 }
 
 #content {
@@ -70,15 +70,18 @@ div {
 	font-style: normal;
 	font-weight: 700;
 	font-size: 16px;
-	line-height: 100%;
 	color: #ffffff;
 }
 
+#button:hover {
+	cursor: pointer;
+  background: #dd9d7a;
+}
+
 #modal-main-text {
-	
 	width: 380px;
 	height: 24px;
-	margin-left: 95px;
+	margin-left: 39px;
 	margin-top: 30px;
 	font-weight: 300;
 	font-size: 16px;
@@ -86,48 +89,62 @@ div {
 }
 
 #alert {
-	
 	width: 380px;
 	height: 50px;
-	margin-left: 95px;
-	margin-top: 56px;
+	margin-left: 39px;
+	margin-top: -12px;
 	font-weight: 700;
 	font-size: 42px;
-	line-height: 120%;
-	/* or 50px */
+}
+
+#reset-button {
+	width: 110px;
+	height: 20px;
+	background: #aaaaaa;
+	border-color: #333333;
+	border-width: 1px;
+	border-radius: 10px;
+	font-weight: 700;
+	font-size: 14px;
+	color: #ffffff;
+}
+
+#reset-button:hover {
+	cursor: pointer;
+  background: #666666
 }
 
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	display: none;
+	position: fixed;
+	z-index: 1;
 	left: 0;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: #121212; /* Fallback color */
-	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+	width: 100%;
+	height: 100%;
+	min-width: 618px;
+	overflow: auto;
+	background-color: #121212;
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
 	background-color: #ffffff;
 	margin: 15% auto;
-	padding: 20px;
-	width: 64%;
-	height: 210px;
+	padding: 56px;
+	width: 60%;
+	height: 98px;
 }
 
 .close {
-	color: #aaa;
-	float: right;
+	color: #000000;
 	font-size: 28px;
-	font-weight: bold;
 	width: 12px;
 	height: 12px;
-	position: absolute;
-	margin-right: 46px;
-	margin-top: 46px;
+	position: relative;
+	margin-top: -20px;
+	margin-right: -8px;
+	float: right;
 }
 
 .close:hover,
