--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,8 +21,16 @@ body {
 
 #image {
 	width: 505px;
+  border-width: 1px;
+  border-style: solid;
 	height: 330px;
-	background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg");
+	/* background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg"); */
+}
+
+@media (max-width: 400px) {
+  #image {
+    max-width: 100%;
+  }
 }
 
 #content {
