--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,11 +27,14 @@ body {
 	/* background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg"); */
 }
 
-@media (max-width: 400px) {
-  #image {
-    max-width: 100%;
+/* @media (max-width: 700px) {
+  #modal-content {
+    width:max-content ;
   }
-}
+} */
+
+
+
 
 #content {
 	width: 380px;
@@ -97,8 +100,8 @@ body {
 #modal-content {
 	background-color: #ffffff;
 	margin: 15% auto;
-	padding: 56px;
-	width: 60%;
+	/* padding: 56px; */
+	width: max-content;
 	height: 98px;
 }
 
@@ -127,7 +130,7 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	min-width: 618px;
+	/* max-width: 618px; */
 	overflow: auto;
 	background-color: #121212;
 	background-color: rgba(0, 0, 0, 0.4);
