--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,6 @@ body {
 	width: 1440px;
 	display: flex;
 	justify-content: center;
-	min-width: 600px;
 }
 
 #page {
@@ -27,12 +26,20 @@ body {
 	/* background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg"); */
 }
 
-/* @media (max-width: 700px) {
-  #modal-content {
-    width:max-content ;
+@media (max-width: 400px) {
+  #image {
+    width:100%;
   }
-} */
-
+  #page {
+    gap: 0px;
+  }
+  #content {
+    width: 100%;
+  }
+  #modal-content {
+    padding: 20px;
+  }
+}
 
 
 
@@ -100,8 +107,8 @@ body {
 #modal-content {
 	background-color: #ffffff;
 	margin: 15% auto;
-	/* padding: 56px; */
-	width: max-content;
+	padding: 56px;
+	width: 618px;
 	height: 98px;
 }
 
@@ -130,7 +137,7 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	/* max-width: 618px; */
+	min-width: 618px;
 	overflow: auto;
 	background-color: #121212;
 	background-color: rgba(0, 0, 0, 0.4);
