--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,6 @@ body {
 	background-color: white;
 	font-family: "Roboto", sans-serif;
 	display: flex;
-	justify-content: center;
 }
 
 #container {
@@ -21,50 +20,50 @@ body {
 
 #image {
 	width: 505px;
-	border-width: 1px;
-	border-style: solid;
 	height: 330px;
-	/* background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg"); */
+	background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg");
 }
 
-@media screen and (max-width: 500px) {
-	#container {
-		margin-top: 10px;
-	}
-	#image {
-		width: 90%;
-	}
-	#page {
-		gap: 0px;
-	}
-	#content {
-		width: 100%;
-		height: auto;
-	}
-	#modal-main-text {
-		width: 50px;
-	}
-	/* #modal-content {
-		padding: 0px;
-	  width: 90%;
-    margin-left: 5px;
-    margin-right: 5px;
-	}  */
-	/* #alert,
-	#modal-main-text,
-	#reset-button {
-		margin-left: auto;
-    margin-right: auto;
-		width: 200px;
-	} */
+@media (max-width: 500px) {
+  #container {
+    margin-top: 10px;
+  }
+  #image {
+    width:90%;
+  }
+  #page {
+    gap: 0px;
+  }
+  #text {
+    width: 90%;
+  }
+  #content {
+    width: 90%;
+    align-items: center;
+  }
+  #title {
+    display: flex;
+    justify-content: center;
+  }
+  #modal-content {
+    max-width: 100%;
+   }
+  #alert {
+    width: 200px;
+    margin-left: -70px;
+  }
+  #modal-main-text {
+    margin-left: -70px;
+  }
 }
+
+
 
 #content {
 	width: 380px;
 	height: 330px;
 	display: flex;
 	flex-direction: column;
-  border: 1px, solid, black;
 }
 
 #title {
@@ -85,10 +84,20 @@ body {
 	align-items: center;
 }
 
+#modal-content {
+	background-color: #ffffff;
+	margin: 15% auto;
+	padding-left: 95px;
+  padding-right: 56px;
+  padding-top: 44px;
+  padding-bottom: 56px;
+	width: 58%;
+	height: 110px;
+}
+
 #alert {
 	width: 380px;
 	height: 50px;
-	margin-top: -12px;
 	font-weight: 700;
 	font-size: 42px;
 }
@@ -116,19 +125,7 @@ body {
 
 #reset-button:hover {
 	cursor: pointer;
-	background: #666666;
-}
-
-#modal-content {
-	background-color: #ffffff;
-	margin-top: 15%;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 95px;
-	padding-top: 56px;
-	padding-bottom: 56px;
-	width: 60%;
-	height: 98px;
+  background: #666666
 }
 
 #close {
@@ -137,7 +134,7 @@ body {
 	width: 12px;
 	height: 12px;
 	position: relative;
-	margin-top: -20px;
+	margin-top: -8px;
 	margin-right: -8px;
 	float: right;
 }
@@ -156,7 +153,6 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	min-width: 618px;
 	overflow: auto;
 	background-color: #121212;
 	background-color: rgba(0, 0, 0, 0.4);
@@ -178,5 +174,5 @@ body {
 .button-component:hover,
 .button-component:focus {
 	cursor: pointer;
-	background: #dd9d7a;
+  background: #dd9d7a;
 }
