--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,6 @@ body {
 	width: 1440px;
 	display: flex;
 	justify-content: center;
-	min-width: 600px;
 }
 
 #page {
@@ -24,6 +23,41 @@ body {
 	height: 330px;
 	background: url("../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg");
 }
+
+@media (max-width: 500px) {
+  #container {
+    margin-top: 10px;
+  }
+  #image {
+    width:90%;
+  }
+  #page {
+    gap: 0px;
+  }
+  #text {
+    width: 90%;
+  }
+  #content {
+    width: 90%;
+    align-items: center;
+  }
+  #title {
+    display: flex;
+    justify-content: center;
+  }
+  #modal-content {
+    max-width: 100%;
+   }
+  #alert {
+    width: 200px;
+    margin-left: -70px;
+  }
+  #modal-main-text {
+    margin-left: -70px;
+  }
+}
+
+
 
 #content {
 	width: 380px;
@@ -50,11 +84,20 @@ body {
 	align-items: center;
 }
 
+#modal-content {
+	background-color: #ffffff;
+	margin: 15% auto;
+	padding-left: 95px;
+  padding-right: 56px;
+  padding-top: 44px;
+  padding-bottom: 56px;
+	width: 58%;
+	height: 110px;
+}
+
 #alert {
 	width: 380px;
 	height: 50px;
-	margin-left: 39px;
-	margin-top: -12px;
 	font-weight: 700;
 	font-size: 42px;
 }
@@ -62,7 +105,6 @@ body {
 #modal-main-text {
 	width: 380px;
 	height: 24px;
-	margin-left: 39px;
 	margin-top: 30px;
 	font-weight: 300;
 	font-size: 16px;
@@ -86,21 +128,13 @@ body {
   background: #666666
 }
 
-#modal-content {
-	background-color: #ffffff;
-	margin: 15% auto;
-	padding: 56px;
-	width: 60%;
-	height: 98px;
-}
-
 #close {
 	color: #000000;
 	font-size: 28px;
 	width: 12px;
 	height: 12px;
 	position: relative;
-	margin-top: -20px;
+	margin-top: -8px;
 	margin-right: -8px;
 	float: right;
 }
@@ -119,7 +153,6 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	min-width: 618px;
 	overflow: auto;
 	background-color: #121212;
 	background-color: rgba(0, 0, 0, 0.4);
