--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@ body {
 	background-color: white;
 	font-family: "Roboto", sans-serif;
 	display: flex;
+	justify-content: center;
 }
 
 #container {
